# c-playground

./: CMakeLists.txt  echo_epoll.c  echo_io_uring.c
cmake/: FindLibUring.cmake  FindLibevent.cmake
http_file_server/: CMakeLists.txt  server.c
